--- a/KosaESS/src/main/resources/static/css/admin/manager_list.css
+++ b/KosaESS/src/main/resources/static/css/admin/manager_list.css
@@ -74,6 +74,7 @@
 	border-radius: 3px;
 	padding: 5px;
 	display: flex;
+	cursor: pointer;
 }
 
 .search_filter_btn_wrap button img {
@@ -126,6 +127,7 @@
 	display: flex;
 	margin: 2px;
 	padding: 5px;
+	cursor: pointer;
 }
 
 .content_list {
@@ -202,6 +204,7 @@
 	display: flex;
 	margin: 2px;
 	padding: 0 5px;
+	cursor: pointer;
 }
 
 .red {
