--- a/KosaESS/src/main/resources/templates/admin/inquiry_list.html
+++ b/KosaESS/src/main/resources/templates/admin/inquiry_list.html
@@ -175,23 +175,29 @@
 					selectedCheckboxes.forEach(function(checkbox) {
 						selectedInquiryIds.push(checkbox.value);
 					});
-
-					console.log(selectedInquiryIds);
-					// Ajax 요청에서 selectedLectureIds를 배열로 전송합니다.
-					$.ajax({
-						url : '/admin/inquiry/delete',
-						method : 'POST',
-						data : {
-							selectedInquiryIds : selectedInquiryIds
-						},
-						success : function(response) {
-							console.log(response);
-							if (response == "success") {
-								alert("선택한 문의가 삭제되었습니다.");
-								window.location.href = "/admin/inquiry/list";
+					
+					//만약 아무것도 선택되어있지 않다면
+			        if (selectedCheckboxes.length === 0) {
+			            alert("삭제할 문의를 선택해주세요.");
+			            
+			        }else{
+			        	console.log(selectedInquiryIds);
+						// Ajax 요청에서 selectedLectureIds를 배열로 전송합니다.
+						$.ajax({
+							url : '/admin/inquiry/delete',
+							method : 'POST',
+							data : {
+								selectedInquiryIds : selectedInquiryIds
+							},
+							success : function(response) {
+								console.log(response);
+								if (response == "success") {
+									alert("선택한 문의가 삭제되었습니다.");
+									window.location.href = "/admin/inquiry/list";
+								}
 							}
-						}
-					});
+						});
+			        }
 				});
 
 		//초기화 버튼
