--- a/KosaESS/src/main/resources/templates/manager/mypage_updateInfo.html
+++ b/KosaESS/src/main/resources/templates/manager/mypage_updateInfo.html
@@ -4,11 +4,53 @@
 <meta charset="UTF-8">
 </head>
 <head>
-	<link th:href="@{/css/manager/manager_wlog_list.css}" rel="stylesheet" />
+	<link th:href="@{/css/manager/manager_mypage.css}" rel="stylesheet" />
 	<link th:href="@{/css/manager/alert_box.css}" rel="stylesheet" />
-	<link th:href="@{/css/manager/modal_style.css}" rel="stylesheet" />
 </head>
 <body>
+<!-- 서브바 부분 -->
+<div th:replace="~{/include/manager_subbar_2 :: subbar}"></div>
+<!-- End 서브바 -->
+
+<!-- 얼럴트 -->
+<div class="look_at_me">
+	<span class="read_this">이봐!</span>
+</div>
+<!-- End : 얼럴트 -->
+
+<!-- 컨텐츠 부분 -->
+<div class="home-section">
+	<!-- title -->
+	<div class="title_wrap">
+		<span class="title" th:text="${title}"></span>
+	</div>
+
+	<!-- content wrap-->
+	<div class="content_wrap">
+		<table>
+			<tr>
+				<th>이름</th>
+				<td><textarea th:value="${thisManager.mngrNm}" class="text_email"></textarea></td>
+			</tr>
+			<tr>
+				<th>이메일</th>
+				<td><textarea th:value="${thisManager.userEmail}" class="text_email"></textarea></td>
+			</tr>
+			<tr>
+				<th>비밀번호</th>
+				<td><input type="password" class="input_password"> </td>
+			</tr>
+			<tr>
+				<th>비밀번호 확인</th>
+				<td><input type="password" class="input_password_confirm"> </td>
+			</tr>
+			<tr>
+				<th>전화번호</th>
+				<td><input th:value="${thisManager.mngrTel}" class="input_tel"></td>
+			</tr>
+		</table>
+	</div>
+</div>
 
 </body>
 </html>
